fixed spacing on header

--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ a {
   Base Layout Styles
 ==================================== */
 
+/* ---- Navigation ---- */
+.name {
+	margin: 0;
+}
+
+
 /* ---- Layout Containers ---- */
 
 .wrapper{
@@ -26,6 +32,7 @@ a {
 
 .main-header {
 	background: #3acec2;
+	padding: 1em 0;
 }
 
 .main-footer {
